# timescale

./: .gitignore  README.md  pyproject.toml  requirements.txt  test1.parquet  test2.parquet
app/: info_board.py  layout.py  main.py  state.py  ts_view.py
assets/: 2024-03-05.parquet  2024-03-05_0002_10000011.csv  2024-03-05spannung.parquet  2024-03-05strom.parquet  test1.parquet  test2.parquet
assets/pf_ts/: ts6_3k-6k_1.csv  ts6_3k-6k_2.csv  ts6_first_10k_1.csv  ts6_first_10k_2.csv  ts6_full_1.csv  ts6_full_2.csv
assets/weather/: main.py  stations.csv  stations_metadata.csv
assets/weather/processed/: station_10427.parquet  station_10439.parquet  station_10528.parquet  station_10532.parquet  station_10534.parquet  station_10535.parquet  station_10537.parquet  station_D0091.parquet  station_D0158.parquet  station_D0211.parquet  station_D0310.parquet  station_D0389.parquet  station_D0390.parquet  station_D0796.parquet  station_D0817.parquet  station_D0979.parquet  station_D1055.parquet  station_D1639.parquet  station_D1645.parquet  station_D3042.parquet  station_D3164.parquet  station_D3215.parquet  station_D3413.parquet  station_D3527.parquet  station_D4560.parquet  station_D5240.parquet  station_D5490.parquet  station_D5524.parquet
tests/: aligner.py  transformer.py
timescale/: io.py  timeseries.py
timescale/generator/: generate.py
timescale/processing/: align2.py  alignment.py  noise.py  pipeline.py
tslib/: io.py  timeseries.py  utils.py
tslib/generator/: generate.py  test.yaml
tslib/processing/: alignment.py  pipeline.py
(+28 files in other folders)
